--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
-
   <style>
     html, body { margin:0; height:100% }
     #map { position:absolute; inset:0 }
@@ -15,7 +14,7 @@
     .mapboxgl-popup{ filter:drop-shadow(0 14px 28px rgba(0,0,0,.45)) }
     .mapboxgl-popup-tip{ display:none !important }
 
-    /* Make popup background transparent; move white card styling inside */
+    /* Make popup content transparent; we render our own rounded card */
     .mapboxgl-popup-content{
       background:transparent !important;
       border:none !important;
@@ -38,34 +37,36 @@
       border:none !important;
       outline:none !important;
       box-shadow:none !important;
-      z-index:3;
       position:absolute;
+      z-index:3;
     }
 
-    /* Real card (handles rounding & clipping) */
+    /* Our card handles the rounding + clipping */
     .popup-card{
       display:flex;
       align-items:stretch;
       background:#fff;
       border-radius:12px;
-      overflow:hidden;                 /* critical: clips corners, no white fringe */
+      overflow:hidden;             /* critical: clips corners cleanly */
     }
 
-    /* Left image column – no radius, let parent clip */
-    .popup-img{
+    /* Image is inside its own clipped wrapper to avoid seams */
+    .img-wrap{
       width:140px;
       flex:0 0 140px;
-      background:center/cover no-repeat;
-      background-color:transparent;
+      border-radius:12px 0 0 12px;
+      overflow:hidden;             /* clip the img exactly to the curve */
+      background:#000;             /* mask any subpixel sliver */
+    }
+    .img-wrap img{
       display:block;
-      margin:0;
-      border:0 !important;
-      outline:0 !important;
-      box-shadow:none !important;
-      transform:translateZ(0);         /* prevent subpixel seams */
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      transform:translateZ(0);     /* prevent subpixel gaps on some GPUs */
     }
 
-    /* Right (white) column widened +50px */
+    /* Right column widened +50px */
     .popup-body{
       padding:8px 27px 10px 12px;
       flex:0 0 220px;
@@ -121,18 +122,16 @@
     }
 
     @media (max-width:440px){
-      .popup-img{ width:120px; flex-basis:120px }
+      .img-wrap{ width:120px; flex-basis:120px }
       .popup-heading{ white-space:normal }
     }
   </style>
 </head>
-
 <body>
 <div id="map"></div>
 
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.js"></script>
 <script src="https://unpkg.com/@tmcw/togeojson@5.8.0/dist/togeojson.umd.js"></script>
-
 <script>
 mapboxgl.accessToken="pk.eyJ1IjoicmVtbWlhZ2JlYmkiLCJhIjoiY21odHRrYTQzMTk0bjJqcjE1b2xhZ2FraSJ9.nTCz33gX0gQt3T4A6VD0oQ";
 
@@ -246,7 +245,7 @@ function specsHTML(s,u){
 function popupHtmlFor(h){
   return `
     <div class="popup-card">
-      <div class="popup-img" style="background-image:url('${h.photo}')"></div>
+      <div class="img-wrap"><img src="${h.photo}" alt="${h.name}"></div>
       <div class="popup-body">
         <div class="popup-heading">${h.name}</div>
         ${specsHTML(h.specs,{hikeUrl:h.hikeUrl,directionsUrl:h.directionsUrl})}
