--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href="https://api.mapbox.com/mapbox-gl-js/v3.2.0/mapbox-gl.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
+
   <style>
     html, body { margin:0; height:100% }
     #map { position:absolute; inset:0 }
@@ -14,7 +15,6 @@
     .mapboxgl-popup{ filter:drop-shadow(0 14px 28px rgba(0,0,0,.45)) }
     .mapboxgl-popup-tip{ display:none !important }
 
-    /* Make popup content transparent; we render our own rounded card */
     .mapboxgl-popup-content{
       background:transparent !important;
       border:none !important;
@@ -41,35 +41,32 @@
       z-index:3;
     }
 
-    /* Our card handles the rounding + clipping */
     .popup-card{
       display:flex;
       align-items:stretch;
       background:#fff;
       border-radius:12px;
-      overflow:hidden;             /* critical: clips corners cleanly */
+      overflow:hidden;
     }
 
-    /* Image is inside its own clipped wrapper to avoid seams */
     .img-wrap{
       width:140px;
       flex:0 0 140px;
       border-radius:12px 0 0 12px;
-      overflow:hidden;             /* clip the img exactly to the curve */
-      background:#000;             /* mask any subpixel sliver */
+      overflow:hidden;
+      background:#000;
     }
     .img-wrap img{
       display:block;
       width:100%;
       height:100%;
       object-fit:cover;
-      transform:translateZ(0);     /* prevent subpixel gaps on some GPUs */
+      transform:translateZ(0);
     }
 
-    /* Right column widened +50px */
     .popup-body{
       padding:8px 27px 10px 12px;
-      flex:0 0 220px;
+      flex:0 0 220px;   /* widened +50px from original */
       text-align:center;
       min-width:0;
     }
@@ -177,7 +174,7 @@ const hikes = [
   }
 ];
 
-/* map */
+/* Map */
 const map = new mapboxgl.Map({
   container:"map",
   style:"mapbox://styles/mapbox/satellite-streets-v12",
@@ -186,26 +183,24 @@ const map = new mapboxgl.Map({
 });
 map.addControl(new mapboxgl.NavigationControl(),"bottom-right");
 
+/* Hover sync — instant, no rAF */
 const markerElsById = {};
-const routeLayerId = {};
+const routeLayerId  = {};
 let hoveredId = null;
-let rafToken = null;
 
-/* hover sync */
 function setMarkerColor(id,color){
-  const el=markerElsById[id];
+  const el = markerElsById[id];
   if(!el) return;
-  const path=el.querySelector("svg path");
+  const path = el.querySelector("svg path");
   if(path) path.setAttribute("fill",color);
 }
 function setRouteColor(id,color){
-  const lyr=routeLayerId[id];
+  const lyr = routeLayerId[id];
   if(lyr && map.getLayer(lyr)){
     map.setPaintProperty(lyr,"line-color",color);
   }
 }
 function applyHoverState(){
-  rafToken=null;
   Object.keys(routeLayerId).forEach(id=>setRouteColor(id,RED));
   Object.keys(markerElsById).forEach(id=>setMarkerColor(id,RED));
   if(hoveredId){
@@ -218,16 +213,17 @@ function applyHoverState(){
 }
 function setHovered(id){
   hoveredId=id;
-  if(!rafToken) rafToken=requestAnimationFrame(applyHoverState);
+  applyHoverState();   // instant update
 }
 
-/* icons */
+/* Icons */
 const icons={
   clock:`<svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="9"/><path d="M12 7v6l4 2"/></svg>`,
   length:`<svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 8h18M3 16h18"/><path d="M6 8v8M10 8v8M14 8v8M18 8v8"/></svg>`,
   ascent:`<svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 20h18"/><path d="M6 18l5-6 4 4 5-7"/><path d="M20 7h-5v5"/></svg>`
 };
 
+/* Popup builders */
 function specsHTML(s,u){
   return `
     <div class="specs">
@@ -241,7 +237,6 @@ function specsHTML(s,u){
       </div>
     </div>`;
 }
-
 function popupHtmlFor(h){
   return `
     <div class="popup-card">
@@ -253,7 +248,7 @@ function popupHtmlFor(h){
     </div>`;
 }
 
-/* gpx */
+/* GPX */
 async function loadGpx(url){
   const res=await fetch(url);
   const xml=new DOMParser().parseFromString(await res.text(),"text/xml");
@@ -269,13 +264,19 @@ function addRoute(id,line){
       id:lyr,
       type:"line",
       source:src,
-      paint:{ "line-color":RED, "line-width":4, "line-opacity":0.95 }
+      paint:{
+        "line-color":RED,
+        "line-width":4,
+        "line-opacity":0.95,
+        "line-color-transition":{duration:0,delay:0},  // ensure instant
+        "line-width-transition":{duration:0,delay:0}
+      }
     });
   }
   routeLayerId[id]=lyr;
 }
 
-/* init */
+/* Init */
 map.on("load", async () => {
   const bounds=new mapboxgl.LngLatBounds();
 
