--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       width:auto;
       max-width:none;
       overflow:visible !important;
+      display:inline-block;              /* <- shrink-wrap so text isn't cut */
+      box-sizing:border-box;
       font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif !important;
     }
 
@@ -49,11 +51,9 @@
       overflow:hidden;
     }
 
-    /* ↓↓↓ REDUCED HEIGHT 75% ↓↓↓ */
     .img-wrap{
       width:140px;
       flex:0 0 140px;
-      height:70px;                        /* NEW: reduce popup height */
       border-radius:12px 0 0 12px;
       overflow:hidden;
       background:#000;
@@ -66,16 +66,12 @@
       transform:translateZ(0);
     }
 
-    /* White column auto-matches reduced height */
     .popup-body{
       padding:8px 27px 10px 12px;
-      flex:0 0 220px;
+      flex:0 0 220px;   /* widened +50px */
       text-align:center;
       min-width:0;
-      height:70px;                         /* Match reduced image height */
-      display:flex;
-      flex-direction:column;
-      justify-content:center;              /* Center vertically */
+      word-break:break-word;             /* safety for long words */
     }
 
     .popup-heading{
@@ -84,16 +80,15 @@
       line-height:1.25;
       margin:0 0 6px 0;
       color:#1E1E1E;
-      white-space:nowrap;
+      white-space:normal;                /* <- allow wrapping so it stays in view */
     }
 
     .specs{
       font-size:13px;
       display:flex;
       flex-direction:column;
-      gap:2px;
+      gap:4px;
       align-items:center;
-      margin-top:-4px;
     }
     .spec-row{
       display:flex;
@@ -109,7 +104,8 @@
       gap:6px;
       justify-content:center;
       align-items:center;
-      margin-top:3px;
+      margin-top:8px;
+      flex-wrap:wrap;                    /* allow wrap on tiny screens */
     }
     .popup-link{
       color:#3899EC;
@@ -117,10 +113,17 @@
       text-decoration:none;
       white-space:nowrap;
     }
+    .mapboxgl-popup-content a,
+    .mapboxgl-popup-content a:focus,
+    .mapboxgl-popup-content a:active{
+      outline:none !important;
+      box-shadow:none !important;
+      border:none !important;
+      background:transparent !important;
+    }
 
     @media (max-width:440px){
       .img-wrap{ width:120px; flex-basis:120px }
-      .popup-heading{ white-space:normal }
     }
   </style>
 </head>
@@ -183,19 +186,19 @@ const map = new mapboxgl.Map({
 });
 map.addControl(new mapboxgl.NavigationControl(),"bottom-right");
 
-/* Hover sync */
+/* Hover sync — instant */
 const markerElsById = {};
 const routeLayerId  = {};
 let hoveredId = null;
 
 function setMarkerColor(id,color){
-  const el=markerElsById[id];
+  const el = markerElsById[id];
   if(!el) return;
-  const path=el.querySelector("svg path");
+  const path = el.querySelector("svg path");
   if(path) path.setAttribute("fill",color);
 }
 function setRouteColor(id,color){
-  const lyr=routeLayerId[id];
+  const lyr = routeLayerId[id];
   if(lyr && map.getLayer(lyr)){
     map.setPaintProperty(lyr,"line-color",color);
   }
@@ -231,16 +234,16 @@ function specsHTML(s,u){
       <div class="spec-row">${icons.length}<span class="spec-value">${s.length}</span></div>
       <div class="spec-row">${icons.ascent}<span class="spec-value">${s.ascent}</span></div>
       <div class="popup-actions">
-        <a class="popup-link" href="${u.hikeUrl}" target="_blank">Hike Page</a>
+        <a class="popup-link" href="${u.hikeUrl}" target="_blank" rel="noopener">Hike Page</a>
         <span style="font-weight:800;">&amp;</span>
-        <a class="popup-link" href="${u.directionsUrl}" target="_blank">Directions</a>
+        <a class="popup-link" href="${u.directionsUrl}" target="_blank" rel="noopener">Directions</a>
       </div>
     </div>`;
 }
 function popupHtmlFor(h){
   return `
     <div class="popup-card">
-      <div class="img-wrap"><img src="${h.photo}"></div>
+      <div class="img-wrap"><img src="${h.photo}" alt="${h.name}"></div>
       <div class="popup-body">
         <div class="popup-heading">${h.name}</div>
         ${specsHTML(h.specs,{hikeUrl:h.hikeUrl,directionsUrl:h.directionsUrl})}
@@ -287,6 +290,7 @@ map.on("load", async () => {
       .addTo(map);
 
     const el=marker.getElement();
+    el.classList.add("marker");
     markerElsById[h.id]=el;
     bounds.extend(h.coords);
 
