--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       width:auto;
       max-width:none;
       overflow:visible !important;
-      display:inline-block;              /* shrink-wrap to content */
+      display:inline-block;
       box-sizing:border-box;
       font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif !important;
     }
@@ -48,7 +48,7 @@
       align-items:stretch;
       background:#fff;
       border-radius:12px;
-      overflow:hidden;                   /* keep rounded corners */
+      overflow:hidden;
     }
 
     .img-wrap{
@@ -66,10 +66,9 @@
       transform:translateZ(0);
     }
 
-    /* Allow the white column to grow so text never clips */
     .popup-body{
       padding:8px 27px 10px 12px;
-      flex:1 1 240px;                    /* was fixed 220px; now flexible */
+      flex:1 1 300px;   /* WIDENED: was 240px */
       text-align:center;
       min-width:0;
       word-break:break-word;
@@ -81,7 +80,7 @@
       line-height:1.25;
       margin:0 0 6px 0;
       color:#1E1E1E;
-      white-space:normal;                /* allow wrapping */
+      white-space:normal;
     }
 
     .specs{
@@ -106,7 +105,7 @@
       justify-content:center;
       align-items:center;
       margin-top:8px;
-      flex-wrap:wrap;                    /* wrap if needed on narrow screens */
+      flex-wrap:wrap;
     }
     .popup-link{
       color:#3899EC;
