--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
     .mapboxgl-popup{ filter:drop-shadow(0 14px 28px rgba(0,0,0,.45)) }
     .mapboxgl-popup-tip{ display:none !important }
 
+    /* keep Mapbox container sizing fluid so the card can be as narrow as we set */
     .mapboxgl-popup-content{
       background:transparent !important;
       border:none !important;
       padding:0 !important;
       box-shadow:none !important;
-      width:auto !important;
-      max-width:none !important;
+      width:auto !important;           /* no forced width */
+      max-width:none !important;       /* remove Mapbox default 240px cap */
       overflow:visible !important;
-      display:inline-block;
+      display:block;                   /* block avoids any right-edge clipping */
       box-sizing:border-box;
       font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif !important;
     }
@@ -49,7 +50,9 @@
       background:#fff;
       border-radius:12px;
       overflow:hidden;
-      min-width: 460px;                 /* 140 (img) + 300 (text) + padding */
+      width: fit-content;              /* shrink-wrap to content */
+      min-width: 380px;                /* 140 img + 230 text + padding */
+      max-width: 420px;                /* hard ceiling so it never grows too wide */
     }
 
     .img-wrap{
@@ -68,10 +71,11 @@
     }
 
     .popup-body{
-      padding:8px 27px 10px 12px;
-      flex:0 0 300px;                   /* fixed, prevents squish */
+      padding:8px 22px 10px 12px;
+      flex:0 0 230px;                  /* reduced text column width */
+      min-width:230px;                 /* prevents squish that causes overflow */
+      max-width:230px;                 /* locks width so whitespace cannot grow */
       text-align:center;
-      min-width:300px;                   /* hard floor for safety */
       word-break:break-word;
       overflow:visible;
     }
@@ -118,7 +122,10 @@
 
     @media (max-width:440px){
       .img-wrap{ width:120px; flex-basis:120px }
-      .popup-card{ min-width: 420px; }   /* 120 + 300 */
+      .popup-card{
+        min-width: 350px;              /* 120 + 230 */
+        max-width: 350px;
+      }
     }
   </style>
 </head>
